tests/rt/neg/ifc/lclear-wrongauth.trp
(* negative test; should fail *)
let val c = raisembox (`<alice;#root-integrity>`)
    val () = lowermbox (c, attenuate (authority, `<bob;#root-integrity>`))    
in c
end 